# Chat-With-Multiple-PDF-Documents-With-Langchain-And-Google-Gemini

./: README.md  app.py  pyproject.toml  rag.py  requirements.txt
.github/workflows/: main.yml
faiss_index/: index.faiss  index.pkl
